--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     />
     <script src="index.js"></script>
     <!-- #3: Import external libraries here -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 
 
     
