--- a/index.html
+++ b/index.html
@@ -15,8 +15,6 @@
     <script src="index.js"></script>
     <!-- #3: Import external libraries here -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-
-
     
   </head>
 
@@ -25,7 +23,7 @@
       COVID Cases at US Universities
     </header>
     <main>
-      <div id="notice">
+      <div id="notice" class="animate_animated animate_bounce">
         <span id="case-date-update">
           Case data updated as of October 22, 2020
         </span>
