--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="index.js"></script>
     <!-- #3: Import external libraries here -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <script src="https://cdn.plot.ly/plotly-2.9.0.min.js"></script>
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     
   </head>
 
